--- a/bib/publications.tmpl
+++ b/bib/publications.tmpl
@@ -1,14 +1,14 @@
 <table class="table">
 <tbody>
-	{%- set prev_year = 1900 %}
+    {% set vars = {'prev_year': 1900} %}
 	{%- for entry in entries %}
 	<tr>
 		<td>
 			<span class="date">
-				{% if entry.fields['year'] != prev_year %}
+				{% if entry.fields['year'] != vars.prev_year %}
 				<big><strong>{{ entry.fields['year'] }}</strong></big><br />
 				{% endif %}
-				{%- set prev_year = entry.fields['year'] %}
+				{% if vars.update({'prev_year': entry.fields['year'] }) %}{% endif %}
 				{{ entry.fields['month']|monthname }}
 			</span>
 		</td>
